@@ -1971,6 +1971,17 @@
       </component>
     </version>
   </module>
+  <module name="monkey-bubble">
+    <version release="gnome-2.6">
+      <component name="monkey-bubble" dir="monkey-bubble" group="extras">
+	<podir dir="po"/>
+	<potname name="monkey-bubble.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="monster-masher">
     <version release="gnome-2.6">
       <component name="monster-masher" dir="monster-masher" group="fifth-toe">
