@@ -1,3 +1,7 @@
+2004-02-02  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added monkey-bubble.
+
 2004-02-01  Danilo Šegan  <dsegan@gmx.net>
 
 	* translation-status.xml: GSwitchIt is integrated into g-c-c and
